tests/miniJava/neg/005248_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] Main java ( ) { return 0 ; } }
